ecmascript/parser/tests/test262-error-references/fail/d6b39890287ec55d.js.stderr
error: Expected Semi, got Some(LBracket)
 --> $DIR/tests/test262-parser/fail/d6b39890287ec55d.js:1:6
  |
1 | var a[0]=0;
  |      ^

